--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,35 +8,30 @@
 /*-------HEADER--------*/
 header{
     background-color:#171D1C;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    z-index: 1;
-    width: 100%;
+    position: sticky;
     top: 0px;
+    z-index: 1;
 }
 
-.logo{
+.navbar{
+    width: 100%;
+}
+
+.collapse{
+    flex-direction: row-reverse;
+}
+
+.nav-link{
+    color: whitesmoke;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.navbar-brand img{
     width: 50px;
     margin-top: 10px;
     margin-left: 25px;
     margin-bottom: 10px;
-}
-
-.menu ul li{
-    display: inline-block;
-    margin: 10px 10px;
-    position: relative;
-    align-items: flex-end;
-}
-
-.menu ul li a{
-    color: whitesmoke;
-    font-size: 17px;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 700;
-    text-decoration: none;
 }
 
 
@@ -152,7 +147,6 @@ header{
     text-align: center;
     color: whitesmoke;
     padding: 40px;
-    margin-top: 50px;
     background-color: #7B0D1E;
 }
 
@@ -367,7 +361,7 @@ footer{
 }
 
 
-/*--resgistrate--*/
+/*--REGISTRATE--*/
 
 .sign-up-form{
     margin: 0 auto;
@@ -380,7 +374,6 @@ footer{
     text-align: center;
     color: whitesmoke;
     padding: 40px;
-    margin-top: 50px;
     background-color: #7B0D1E;
 }
 
@@ -418,7 +411,6 @@ footer{
     text-align: center;
     color: whitesmoke;
     padding: 40px;
-    padding-top: 100px;
     background-color: #7B0D1E;
 }
 
@@ -436,7 +428,7 @@ footer{
 }
 
 .programas .plan div{
-    margin: 35px;
+    margin: 40px;
     border: none;
     text-align: center;
     background-color: #DFDFDF;
@@ -474,11 +466,57 @@ footer{
 
 .plan h4{
     font-size: larger;
-    padding: 40px;
+    padding: 30px;
 }
 
-.plan div a{
+.plan a{
     text-decoration: none;
+    position: relative;
+    padding: 5px 5px;
+    margin: 45px 0;
+    color: #7B0D1E;
+    font-size: 20px;
+    text-transform:uppercase;
+    transition: 0.5s;
+}
+
+.plan a::before{
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    width: 10px;
+    height: 10px;
+    border-top: 2px solid #7B0D1E;
+    border-left: 2px solid #7B0D1E;
+    transition: 0.5s;
+    transition-delay: 0.5s;
+}
+
+.plan a::after{
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    right: -1px;
+    width: 10px;
+    height: 10px;
+    border-bottom: 2px solid #7B0D1E;
+    border-right: 2px solid #7B0D1E;
+    transition: 0.5s;
+    transition-delay: 0.5s;
+}
+
+.plan a:hover::before, .plan a:hover::after{
+    width: 100%;
+    height: 100%;
+    transition-delay: 0s;
+}
+
+.plan a:hover{
+    background-color: #7B0D1E;
+    color: whitesmoke;
+    box-shadow: 0 0 50px #7B0D1E;
+    transition-delay: 0.5s;
 }
 
 /*---MEDIA QUERY---*/
