--- a/css/estilo.css
+++ b/css/estilo.css
@@ -433,6 +433,7 @@ footer{
     text-align: center;
     background-color: #DFDFDF;
     align-self: stretch;
+    position: static;
     -webkit-box-shadow: 6px 9px 70px 13px rgba(0,0,0,0.3);
     -moz-box-shadow: 6px 9px 70px 13px rgba(0,0,0,0.3);
     box-shadow: 6px 9px 70px 13px rgba(0,0,0,0.3);
@@ -530,6 +531,12 @@ footer{
     }   
 }
 
+@media screen and (max-width: 741px){
+    .nosotros{
+        flex-direction: column;
+    }
+
+}
 
 @media  screen and (max-width:722px) {
     header{
