--- a/css/estilo.css
+++ b/css/estilo.css
@@ -544,6 +544,7 @@ footer{
 @media screen and (max-width:860px) {
     .info{
         flex-direction: column;
+        width: 100%;
     }
     .info-img{
         width: 100%;
@@ -560,5 +561,28 @@ footer{
 @media  screen and (max-width:722px) {
     header{
         flex-direction: column;
+    }
+    .cambios{
+        flex-direction: column;
+    }
+    .cambios iframe{
+        height: 100%;
+        width: 100%;
+        top: 0px;
+    }
+    .video iframe{
+        height: 100%;
+        width: 100%;
+        top: 0px;
+    }
+
+    .about{
+        flex-direction: column;
+        width: 100%;
+    }
+
+
+    .about .owner img{
+        width: 100%;
     }
 }
